2006-04-20  lav

	* calc.cc, calc.h, editcalc.cc: add support for hex, oct, ins, more functions.
	* getstr.cc: move ModifyKey to tables.cc.
	* le.hlp: update calc help.
	* tables.cc: add wc table, move ModifyKey here.
	* edit.cc, edit.h: rename InitTables, move init_chset outside; save new format
	  history to history2 file.

2006-04-19  lav

	* calc.cc, calc.h, file.cc, file.h, getstr.cc, kern.cc, keymap.cc,
	  keymap.h, keymapdf.cc, keynames.cc, loadsave.cc, menu.cc, menu.h,
	  options.cc, options.h, textpoin.h, window.cc, window.h:
	  add proper const's.
	* edit.cc, user.cc: new history format.
	* edit.h, tables.cc: move InitTables and ModifyKey into ifdef; consts.
	* history.cc, history.h: new history file format; dynamic memory allocation.

2006-04-11  lav

	* keynames.cc, keymapdf.cc: add support for ncurses extended names.

2006-03-22  lav

	* block.cc: fixed delete for rectangular blocks with multibyte chars.
	* clipbrd.cc: fixed copy/paste for rectangular blocks with multibyte chars.
	* mb.cc, mb.h: mb_to_wc new function; define MB_CUR_MAX when unavailable.
	* user.cc: fixed text optimization.
	* edit.cc: fixed history truncation.
	* screen.cc: fixed display of hex data in mb_mode.

2005-07-18  lav

	* keymapdf.cc: added shift-begin/end key codes (for linux console hack);
	  added control-pgup/pgdn xterm key codes.

2005-07-08  lav

	* getch.cc: fix code generation for linux console.
	* keymapdf.cc: add redhat-modified xterm codes.

2005-06-20  lav

	* keymapdf.cc: add rxvt codes; use shifted terminfo codes as block
	  marking actions (reflecting new trend in terminfo).
	* edit.cc, user.cc, user.h: add history for shell and pipe commands.
	* history.cc: fixed reading InodeHistory - removed extra fgetc.

2005-05-31  lav

	* kern.cc: (InsertBlock) fix line numbering of CurrentPos,
	  (ReplaceBlock) fix column numbering for replaced wide chars.
	* mb.cc, mb.h: add validity flag WCharValid, fixed compilation
	  without wide chars.