@@ -88,13 +88,14 @@ struct  opt
 
 // {"rectangle &Blocks",ONE,  (void*)&rblock,  45,2},
 {"No regular expr.", ONE,  (void*)&noreg,	      45,2},
-{"Use &colors",      ONE,  (void*)&UseColor,	      45,3},
-{"&Syntax highlight",ONE,  (void*)&hl_option,	      45,4},
-{"Use tabs",         ONE,  (void*)&UseTabs,	      45,5},
-{"BackSp unindents", ONE,  (void*)&BackspaceUnindents,45,6},
-{"Lazy page scroll", ONE,  (void*)&PreferPageTop,     45,7},
+{"Match case",	     ONE,  (void*)&match_case,	      45,3},
+{"Use &colors",      ONE,  (void*)&UseColor,	      45,4},
+{"&Syntax highlight",ONE,  (void*)&hl_option,	      45,5},
+{"Use tabs",         ONE,  (void*)&UseTabs,	      45,6},
+{"BackSp unindents", ONE,  (void*)&BackspaceUnindents,45,7},
+{"Lazy page scroll", ONE,  (void*)&PreferPageTop,     45,8},
 #ifdef WITH_MOUSE
-{"Use mouse",	     ONE,  (void*)&UseMouse,	      45,8},
+{"Use mouse",	     ONE,  (void*)&UseMouse,	      45,9},
 #endif
 
 {"&Latin",           MANY, (void*)&inputmode,	3,5},
@@ -201,6 +202,7 @@ const struct init init[]=
    { "savepos",      NUM,  (void*)&SavePos            },
    { "savehst",      NUM,  (void*)&SaveHst            },
    { "noreg",        NUM,  (void*)&noreg              },
+   { "match_case",   NUM,  (void*)&match_case         },
    { "linelen",      NUM,  (void*)&LineLen            },
    { "leftmrg",      NUM,  (void*)&LeftMargin         },
    { "flnmarg",      NUM,  (void*)&FirstLineMargin    },
